syntax = "proto3";

package auth;
import "google/protobuf/empty.proto";


option go_package = "./pkg/auth-svc/pb/";

service AuthService{
    rpc Sighup (SignupRequest) returns (SignupResponse) {}
    rpc OtpVerifiction (OtpRequest) returns (OtpResponse) {}
    rpc UserLogin (loginRequest) returns (loginResponse) {}
    rpc AdminLogin (adminLoginRequest) returns (adminLoginResponse) {}
    rpc ValidateUserToken (ValidateTokenRequest) returns (ValidateTokenResponse) {}
    rpc ValidateAdminToken (ValidateAdminTokenRequest) returns (google.protobuf.Empty){}
}

message SignupRequest{
    string Id = 1 ;              
    string Name =  2;            
    string Email =  3;           
    string Phone = 4 ;           
    string Password = 5 ;        
    string ConfirmPassword = 6 ; 
    string ReferalCode = 7 ;     
}

message SignupResponse{
    string ID = 1;
    string Name = 2;
    string Email = 3;
    string Phone = 4;
    string OTP = 5;
    string Token = 6;
    string IsUserExist = 7;
    string ReferalCode = 8;
    uint32 WalletBelance = 9;
}

message OtpRequest{
    string otp =1;
    string temperverToken =2;
}

message OtpResponse{
    string accessToken =1;
    string refreshToken =2;
}

message loginRequest {
    string phone = 1;
    string password = 2;
}

message loginResponse{
    string accessToken =1;
    string refreshToken =2;
}

message adminLoginRequest{
    string email = 1;
    string password = 2;

}

message adminLoginResponse{
    string token = 1;
}

message ValidateTokenRequest{
    string accessToken =1;
    string refreshToken =2;
}

message ValidateTokenResponse{
    string userID =1;
}

message ValidateAdminTokenRequest{
    string token =1;
}
